--- a/.gitmodules
+++ b/.gitmodules
@@ -1,19 +1,19 @@
 [submodule "naming-server"]
-    path = naming-server
+    path = services/naming-server
     url = https://github.com/two-monkeys-org/naming-server
 
 [submodule "main-service"]
-    path = main-service
+    path = services/main-service
     url = https://github.com/two-monkeys-org/main-service
 
 [submodule "user-service"]
-    path = user-service
+    path = services/user-service
     url = https://github.com/two-monkeys-org/user-service
 
 [submodule "naming-server"]
-    path = naming-server
+    path = services/naming-server
     url = https://bitbucket.org/jaredw/awesomelibrary
 
 [submodule "gateway"]
-    path = gateway
+    path = services/gateway
     url = https://github.com/two-monkeys-org/gateway
